<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="ua.juliazozulia.taskcollector.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_padding"
                android:background="@drawable/status_label"
                android:paddingBottom="@dimen/base_padding"
                android:paddingLeft="@dimen/double_grid_step_padding"
                android:paddingRight="@dimen/double_grid_step_padding"
                android:paddingTop="@dimen/base_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                tools:text="@string/state_placeholder" />

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/ActionCapture"
                    android:gravity="center_vertical|start"
                    android:text="@string/created" />

                <TextView
                    android:id="@+id/create_date"
                    style="@style/ActionContent"
                    android:gravity="center_vertical|end"
                    tools:text="@string/date_placeholder" />

            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/ActionCapture"
                    android:gravity="center_vertical|start"
                    android:text="@string/registered" />

                <TextView
                    android:id="@+id/register_date"
                    style="@style/ActionContent"
                    android:gravity="center_vertical|end"
                    tools:text="@string/date_placeholder" />

            </LinearLayout>


            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/ActionCapture"
                    android:gravity="center_vertical|start"
                    android:text="@string/due_date" />

                <TextView
                    android:id="@+id/due_date"
                    style="@style/ActionContent"
                    android:gravity="center_vertical|end"
                    tools:text="@string/date_placeholder" />

            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/ActionCapture"
                    android:gravity="center_vertical|start"
                    android:text="@string/responsible" />

                <TextView
                    android:id="@+id/responsible"
                    style="@style/ActionContent"
                    android:gravity="center_vertical|end"
                    tools:text="@string/date_placeholder" />

            </LinearLayout>

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/double_grid_step_padding"
                android:layout_marginTop="@dimen/double_grid_step_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="@string/placeholder" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/picture_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_recycler_h" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
